Add "edit attributes" button

--- a/templates/_partials/fields/imagelist.html.twig
+++ b/templates/_partials/fields/imagelist.html.twig
@@ -6,23 +6,25 @@
    {% set directory = path('bolt_async_upload', {'location': location|default('files'), 'path': setPath}) %}
    {% set filelist = path('bolt_async_filelisting', {'location': location|default('files'), 'type': 'images' }) %}
    {% set labels = {
-      'button_upload': 'image.button_upload'|trans,
-      'button_from_library': 'image.button_from_library'|trans,
-      'placeholder_filename': 'image.placeholder_filename'|trans,
-      'placeholder_alt_text': 'image.placeholder_alt_text'|trans,
-      'placeholder_title': 'image.placeholder_title'|trans,
-      'button_remove': 'image.button_remove'|trans,
+       'button_upload': 'image.button_upload'|trans,
+       'button_from_library': 'image.button_from_library'|trans,
+       'placeholder_filename': 'image.placeholder_filename'|trans,
+       'placeholder_alt_text': 'image.placeholder_alt_text'|trans,
+       'placeholder_title': 'image.placeholder_title'|trans,
+       'button_remove': 'image.button_remove'|trans,
+       'button_edit_attributes': 'image.button_edit_attributes'|trans,
    }|json_encode %}
    {% set extensions = field.definition.get('extensions')|default('') %}
 
    <editor-imagelist
-           :images='{{ field.value|json_encode }}'
-           :name='{{ name|json_encode }}'
-           :directory='{{ directory|json_encode }}'
-           :filelist='{{ filelist|json_encode }}'
-           :csrf-token='{{ csrf_token('upload')|json_encode }}'
-           :labels='{{ labels }}'
-           :extensions='{{  extensions|json_encode }}'
+       :images='{{ field.value|json_encode }}'
+       :name='{{ name|json_encode }}'
+       :directory='{{ directory|json_encode }}'
+       :filelist='{{ filelist|json_encode }}'
+       :csrf-token='{{ csrf_token('upload')|json_encode }}'
+       :labels='{{ labels }}'
+       :extensions='{{  extensions|json_encode }}'
+       :attributes-link='{{ path('bolt_media_new')|json_encode }}'
    ></editor-imagelist>
 
 {% endblock %}
