--- a/templates/_partials/fields/image.html.twig
+++ b/templates/_partials/fields/image.html.twig
@@ -9,6 +9,7 @@
         'button_from_library': 'image.button_from_library'|trans,
         'placeholder_filename': 'image.placeholder_filename'|trans,
         'placeholder_alt_text': 'image.placeholder_alt_text'|trans,
+        'button_edit_attributes': 'image.button_edit_attributes'|trans,
     }|json_encode %}
     {% set extensions = field.definition.get('extensions')|default('') %}
     <editor-image
@@ -22,5 +23,6 @@
         :csrf-token='{{ csrf_token('upload')|json_encode }}'
         :labels='{{ labels }}'
         :extensions='{{ extensions|json_encode }}'
+        :attributes-link='{{ path('bolt_media_new')|json_encode }}'
     ></editor-image>
 {% endblock %}
