--- a/public/theme/skeleton/search.twig
+++ b/public/theme/skeleton/search.twig
@@ -33,7 +33,7 @@
                 <h2><a href="{{ record|link }}">{{ record|title }}</a></h2>
 
                 {% if record|image is not empty %}
-                    <a href="{{ image(record|image) }}">
+                    <a href="{{ record|image }}">
                         <img src="{{ thumbnail(record|image, 400, 260) }}" alt="{{ (record|image).alt|default(record|title) }}">
                     </a>
                 {% endif %}
