--- a/public/theme/skeleton/custom/test.twig
+++ b/public/theme/skeleton/custom/test.twig
@@ -1,4 +1,4 @@
-{% extends 'partials/_master.twig' %}
+{% extends '../partials/_master.twig' %}
 
 {% block main %}
 
@@ -113,6 +113,6 @@
 
     <hr>
 
-    {% include 'partials/_recordfooter.twig' with { 'record': record, 'extended': true } %}
+    {% include '../partials/_recordfooter.twig' with { 'record': record, 'extended': true } %}
 
 {% endblock main %}
