--- a/templates/_partials/fields/imagelist.html.twig
+++ b/templates/_partials/fields/imagelist.html.twig
@@ -13,6 +13,8 @@
        'placeholder_title': 'image.placeholder_title'|trans,
        'button_remove': 'image.button_remove'|trans,
        'button_edit_attributes': 'image.button_edit_attributes'|trans,
+       'button_move_up': 'image.button_move_up'|trans,
+       'button_move_down': 'image.button_move_down'|trans,
    }|json_encode %}
    {% set extensions = field.definition.get('extensions')|default('') %}
 
