--- a/templates/_partials/fields/filelist.html.twig
+++ b/templates/_partials/fields/filelist.html.twig
@@ -10,6 +10,8 @@
         'placeholder_filename': 'image.placeholder_filename'|trans,
         'placeholder_alt_text': 'image.placeholder_alt_text'|trans,
         'placeholder_title': 'image.placeholder_title'|trans,
+        'button_move_up': 'image.button_move_up'|trans,
+        'button_move_down': 'image.button_move_down'|trans,
     }|json_encode %}
     {% set extensions = field.definition.get('extensions')|default('') %}
 
