--- a/templates/_partials/fields/filelist.html.twig
+++ b/templates/_partials/fields/filelist.html.twig
@@ -12,6 +12,7 @@
         'placeholder_title': 'image.placeholder_title'|trans,
         'button_move_up': 'image.button_move_up'|trans,
         'button_move_down': 'image.button_move_down'|trans,
+        'add_new_file': 'file.add_new_file'|trans,
     }|json_encode %}
     {% set extensions = field.definition.get('extensions')|default('') %}
 
