Add Edit Attributes button to filelist and file

--- a/templates/_partials/fields/file.html.twig
+++ b/templates/_partials/fields/file.html.twig
@@ -10,6 +10,7 @@
         'placeholder_filename': 'image.placeholder_filename'|trans,
         'placeholder_alt_text': 'image.placeholder_alt_text'|trans,
         'placeholder_title': 'image.placeholder_title'|trans,
+        'button_edit_attributes': 'image.button_edit_attributes'|trans,
     }|json_encode %}
     {% set extensions = field.definition.get('extensions')|default('') %}
     <editor-file
@@ -24,5 +25,6 @@
             :csrf-token='{{ csrf_token('upload')|json_encode }}'
             :labels='{{ labels }}'
             :extensions='{{ extensions|json_encode }}'
+            :attributes-link='{{ path('bolt_media_new')|json_encode }}'
     ></editor-file>
 {% endblock %}
