--- a/templates/_partials/fields/filelist.html.twig
+++ b/templates/_partials/fields/filelist.html.twig
@@ -10,9 +10,11 @@
         'placeholder_filename': 'image.placeholder_filename'|trans,
         'placeholder_alt_text': 'image.placeholder_alt_text'|trans,
         'placeholder_title': 'image.placeholder_title'|trans,
+        'button_remove': 'image.button_remove'|trans,
         'button_move_up': 'image.button_move_up'|trans,
         'button_move_down': 'image.button_move_down'|trans,
         'add_new_file': 'file.add_new_file'|trans,
+        'button_edit_attributes': 'image.button_edit_attributes'|trans,
     }|json_encode %}
     {% set extensions = field.definition.get('extensions')|default('') %}
 
