Add new image label

--- a/templates/_partials/fields/imagelist.html.twig
+++ b/templates/_partials/fields/imagelist.html.twig
@@ -15,6 +15,7 @@
        'button_edit_attributes': 'image.button_edit_attributes'|trans,
        'button_move_up': 'image.button_move_up'|trans,
        'button_move_down': 'image.button_move_down'|trans,
+       'add_new_image': 'image.add_new_image'|trans,
    }|json_encode %}
    {% set extensions = field.definition.get('extensions')|default('') %}
 
