Keep allow_html and sanitise as intended

--- a/public/theme/skeleton/custom/test.twig
+++ b/public/theme/skeleton/custom/test.twig
@@ -58,7 +58,7 @@
     </p>
 
     <p>
-        Default output for <code>type: html</code>:<br>
+        Default output for <code>type: textarea</code>:<br>
         <div class="box text_textarea">{{ record.textarea_field }}</div><br>
     </p>
 
