--- a/templates/_partials/fields/set.html.twig
+++ b/templates/_partials/fields/set.html.twig
@@ -1,9 +1,11 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
-   <p>This is the set field.</p>
-   
-   {% for name, singleField in field.value %}
+   {% for fieldName, singleField in field.value %}
+      {% if fieldName == 'hash' %}
+         <input type="hidden" value="{{ singleField }}" name="{{ name }}">
+      {% else %}
       {% include '@bolt/_partials/fields/' ~ singleField.type ~ '.html.twig' with {'field': singleField} only %}
+      {% endif %}
    {% endfor %}
 {% endblock %}
