--- a/templates/_partials/fields/set.html.twig
+++ b/templates/_partials/fields/set.html.twig
@@ -1,11 +1,14 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
+
+   {% set hash = field.value.hash %}
    {% for fieldName, singleField in field.value %}
       {% if fieldName == 'hash' %}
          <input type="hidden" value="{{ singleField }}" name="{{ name }}">
       {% else %}
-      {% include '@bolt/_partials/fields/' ~ singleField.type ~ '.html.twig' with {'field': singleField} only %}
+         {% set fieldName = 'sets[' ~ field.name ~ ']' ~ '[' ~ hash ~ ']' ~ '[' ~ singleField.name ~ ']'%}
+         {% include '@bolt/_partials/fields/' ~ singleField.type ~ '.html.twig' with {'field': singleField, 'name': fieldName} only %}
       {% endif %}
    {% endfor %}
 {% endblock %}
