--- a/templates/_partials/fields/collection.html.twig
+++ b/templates/_partials/fields/collection.html.twig
@@ -2,6 +2,7 @@
 
 {% block field %}
    {% for fieldName, singleField in field.value %}
-      {% include '@bolt/_partials/fields/' ~ singleField.type ~ '.html.twig' with {'field': singleField, 'fieldset_type': field.type } only %}
+      {% set collectionItemName = 'collections[' ~ fieldName ~ ']' %}
+      {% include '@bolt/_partials/fields/' ~ singleField.type ~ '.html.twig' with {'field': singleField, 'in_collection': true, 'name': collectionItemName } only %}
    {% endfor %}
 {% endblock %}
