--- a/templates/_partials/fields/set.html.twig
+++ b/templates/_partials/fields/set.html.twig
@@ -5,14 +5,15 @@
    {% set hash = field.value.hash %}
    {% for fieldName, singleField in field.value %}
       {% if fieldName == 'hash' %}
-         {#<input type="" value="{{ singleField }}" name="{{ name }}"> #}
+         <input type="" value="{{ singleField }}" name="{{ name }}">
       {% else %}
-         {% if fieldset_type is defined %}
-            {% set fieldName = name ~ '[' ~ hash ~ ']' ~ '[' ~ singleField.name ~ ']'%}
-            {% include '@bolt/_partials/fields/' ~ singleField.type ~ '.html.twig' with {'field': singleField, 'name': fieldName } only %}
+         {% if in_collection is defined %}
+            {% set setItemName = name ~ '[' ~ hash ~ ']' ~ '[' ~ singleField.name ~ ']'%}
          {% else %}
-            {% include '@bolt/_partials/fields/' ~ singleField.type ~ '.html.twig' with {'field': singleField,  'fieldset_type': field.type } only %}
+            {% set setItemName = 'sets[' ~ field.name ~ '][' ~ hash ~ ']' ~ '[' ~ singleField.name ~ ']'%}
          {% endif %}
+
+         {% include '@bolt/_partials/fields/' ~ singleField.type ~ '.html.twig' with {'field': singleField, 'name': setItemName } only %}
       {% endif %}
    {% endfor %}
 {% endblock %}
