--- a/assets/scss/modules/editor/fields/_data.scss
+++ b/assets/scss/modules/editor/fields/_data.scss
@@ -1,9 +1,8 @@
 //** Fields | Data
 
 .editor--data {
-
   pre {
-    border: 1px solid #DDD;
+    border: 1px solid #ddd;
     padding: 0.5rem;
     color: #888;
     background: rgba(255, 255, 255, 0.4);
