--- a/templates/_partials/fields/set.html.twig
+++ b/templates/_partials/fields/set.html.twig
@@ -1,11 +1,31 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
+
+
+
+   {% dump(field.value) %}
+
+   {% if in_collection is defined %}
+      {% set setName = name %}
+   {% else %}
+      {% set setName = 'sets[' ~ field.name ~ ']'%}
+   {% endif %}
+
+   <editor-set
+         :id="{{ id|json_encode }}"
+         :set-data="{{ field.jsonSerialize }}"
+         :set-name="{{ setName|json_encode }}"
+      ></editor-set>
+
+
+
+   {#
    {% set hash = field.value.hash %}
    {% for fieldName, singleField in field.value %}
       {% if fieldName == 'hash' %}
          <input type="" value="{{ singleField }}" name="fields[{{ field.name }}]">
-         {# TODO: Fix this above #}
+         {# TODO: Fix this above
       {% else %}
          {% if in_collection is defined %}
             {% set setItemName = name ~ '[' ~ hash ~ ']' ~ '[' ~ singleField.name ~ ']'%}
@@ -16,4 +36,5 @@
          {% include '@bolt/_partials/fields/' ~ singleField.type ~ '.html.twig' with {'field': singleField, 'name': setItemName } only %}
       {% endif %}
    {% endfor %}
+   #}
 {% endblock %}
