--- a/templates/_partials/fields/set.html.twig
+++ b/templates/_partials/fields/set.html.twig
@@ -9,8 +9,7 @@
    {% endif %}
 
    {% for fieldItem in field.value.fields %}
-      {% dump(fieldItem) %}
-      {% set setItemName = 'sets[' ~ field.name ~ '][' ~ field.value.hash ~ ']' ~ '[' ~ fieldItem.name ~ ']'%}
+      {% set setItemName = setName ~ '[' ~ field.value.hash ~ ']' ~ '[' ~ fieldItem.name ~ ']'%}
       {% include '@bolt/_partials/fields/' ~ fieldItem.type ~ '.html.twig' with {'field' : fieldItem, 'name' : setItemName} only %}
    {% endfor %}
 {% endblock %}
