--- a/templates/_partials/fields/collection.html.twig
+++ b/templates/_partials/fields/collection.html.twig
@@ -1,13 +1,14 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
-    {% set set_hashes = [] %}
+    {% set existing_fields = [] %}
     {% if field.value.fields is defined %}
-
         {% for item_field in field.value.fields %}
             {% set collectionItemName = 'collections[' ~ field.name ~ '][' ~ item_field.name ~ ']' %}
-            {% include '@bolt/_partials/fields/' ~ item_field.type ~ '.html.twig' with {'field': item_field, 'in_collection': true, 'name': collectionItemName } only %}
-            {% set set_hashes = set_hashes|merge([item_field.value.hash]) %}
+            {% set existing_field %}
+                {% include '@bolt/_partials/fields/' ~ item_field.type ~ '.html.twig' with {'field': item_field, 'in_collection': true, 'name': collectionItemName } only %}
+            {% endset %}
+            {% set existing_fields = existing_fields|merge([{'html': existing_field, 'hash': item_field.hash}]) %}
         {% endfor %}
     {% endif %}
 
@@ -21,7 +22,7 @@
     {% endfor %}
 
     <editor-collection
-            :set-hashes='{{ set_hashes | json_encode }}'
+            :existing-fields='{{ existing_fields | json_encode }}'
             :templates='{{ templated_fields | json_encode }}'
     ></editor-collection>
 
