--- a/templates/_partials/fields/set.html.twig
+++ b/templates/_partials/fields/set.html.twig
@@ -1,18 +1,29 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
-      {% if in_collection is defined %}
-         {% set setName = name %}
-      {% else %}
-         {% set setName = 'sets[' ~ field.name ~ ']'%}
-      {% endif %}
+    {% if in_collection is defined %}
+        {% set setName = name %}
+    {% else %}
+        {% set setName = 'sets[' ~ field.name ~ ']' %}
+    {% endif %}
 
-      {% for fieldItem in field.value.fields %}
-        {% set setItemName = setName ~ '[' ~ field.value.hash ~ ']' ~ '[' ~ fieldItem.name ~ ']'%}
-             {% include '@bolt/_partials/fields/' ~ fieldItem.type ~ '.html.twig' with {'field' : fieldItem, 'name' : setItemName} only %}
-          {% endfor %}
+    {% for fieldItem in field.value.fields %}
+        {% set setItemName = setName ~ '[' ~ field.value.hash ~ ']' ~ '[' ~ fieldItem.name ~ ']' %}
+        {% include '@bolt/_partials/fields/' ~ fieldItem.type ~ '.html.twig' with {'field' : fieldItem, 'name' : setItemName} only %}
+    {% endfor %}
 
-      {% if in_collection is defined %}
-        <button class='action-remove-collection-item btn btn-hidden-danger' >{{ 'collection.remove_item'|trans}}</button>
-      {% endif %}
+    {% if in_collection is defined %}
+        <button class='action-move-up-collection-item btn btn-secondary' {% if is_first is defined and is_first %} disabled {% endif %}>
+            <i class="fas fa-fw fa-chevron-up"></i>
+            {{ 'collection.move_item_up'|trans }}
+        </button>
+        <button class='action-move-down-collection-item btn btn-secondary' {% if is_last is defined and is_last %} disabled {% endif %}>
+            <i class="fas fa-fw fa-chevron-down"></i>
+            {{ 'collection.move_item_down'|trans }}
+        </button>
+        <button class='action-remove-collection-item btn btn-hidden-danger'>
+            <i class="fas fa-fw fa-times"></i>
+            {{ 'collection.remove_item'|trans }}
+        </button>
+    {% endif %}
 {% endblock %}
