--- a/templates/pages/extension_details.html.twig
+++ b/templates/pages/extension_details.html.twig
@@ -35,10 +35,10 @@
                         <dd class="col-sm-9">{{ package.prettyVersion }}</dd>
                         <dt class="col-sm-3">Dependencies: </dt>
                         <dd class="col-sm-9">
-                            {% if extension.dependencies is empty %}
+                            {% if dependencies is empty %}
                                 <i>No known dependencies</i>
                             {% else %}
-                                {% for dependency in extension.dependencies %}
+                                {% for dependency in dependencies %}
                                     {{ dependency.name }}: {{ dependency.version }} <br>
                                 {% endfor %}
                             {% endif %}
