Make sure step is not overriden if already defined

--- a/templates/_partials/fields/number.html.twig
+++ b/templates/_partials/fields/number.html.twig
@@ -8,7 +8,7 @@
   {% endif %}
 
   {# set step #}
-  {% if field.definition['step'] is defined %}
+  {% if not step|default and field.definition['step'] is defined %}
     {% set step = field.definition.step %}
   {% else %}
     {# default step values #}
