--- a/templates/_partials/fields/_base.html.twig
+++ b/templates/_partials/fields/_base.html.twig
@@ -99,6 +99,8 @@
 
 
 {% if in_collection is defined %}
+    <input type="hidden" name="collections[{{ collection_name }}][order][]" value="{{ hash }}">
+
     <button class='action-move-up-collection-item btn btn-secondary' {% if is_first is defined and is_first %} disabled {% endif %}>
         <i class="fas fa-fw fa-chevron-up"></i>
         {{ 'collection.move_item_up'|trans }}
