--- a/templates/_partials/fields/collection.html.twig
+++ b/templates/_partials/fields/collection.html.twig
@@ -1,4 +1,5 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
+{% import '@bolt/_macro/_macro.html.twig' as macro %}
 
 {% block field %}
     {% set labels = {
@@ -6,46 +7,20 @@
     } %}
 
     {# get the html for all collection field already in the database #}
-    {% set existing_fields = [] %}
+    {% set existing_fields = "" %}
     {% if field.value.fields is defined %}
-        {% for item_field in field.value.fields %}
-            {% set collectionItemName = 'collections[' ~ field.name ~ '][' ~ item_field.definition.name ~ ']' %}
-            {% if item_field.definition.type == 'set' %}
-                {% set hash = item_field.hash %}
-            {% else %}
-                {% set hash = loop.index0 %}
-                {% set collectionItemName = collectionItemName ~ '[' ~ loop.index0 ~ ']' %}
-            {% endif %}
-
-            {% set existing_field %}
-                {% include '@bolt/_partials/fields/' ~ item_field.type ~ '.html.twig' with
-                    {'field': item_field, 'in_collection': true, 'is_first': loop.index0 == 0, 'is_last': loop.index == field.value.fields|length, 'name': collectionItemName, 'collection_name': field.name, 'hash': hash } only %}
-            {% endset %}
-            {% set existing_fields = existing_fields|merge([{'html': existing_field, 'hash': item_field.hash}]) %}
-        {% endfor %}
+        {% set existing_fields %}{{ macro.generate_collection_fields(field, field.value.fields) }}{% endset %}
     {% endif %}
 
     {# get the html template for the collection fields defined in the field definition #}
-    {% set templated_fields = [] %}
-    {% for item_field in field.value.templates %}
-        {% set collectionItemName = 'collections[' ~ field.name ~ '][' ~ item_field.name ~ ']' %}
-        {% if item_field.definition.type == 'set' %}
-            {% set hash = item_field.hash %}
-        {% else %}
-            {# non-set fields do not have hashes, so we create a 'dummy' hash for Vue to use #}
-            {% set hash = loop.index0 %}
-            {% set collectionItemName = collectionItemName ~ '[' ~ hash ~ ']' %}
-        {% endif %}
-        {% set templated_field %}
-            {% include '@bolt/_partials/fields/' ~ item_field.type ~ '.html.twig' with
-                {'field': item_field, 'in_collection': true, 'name': collectionItemName, 'collection_name': field.name, 'hash': hash} only %}
-        {% endset %}
-        {% set templated_fields = templated_fields|merge([{'label': item_field.definition.label, 'html': templated_field, 'hash': hash}]) %}
-    {% endfor %}
+    {% set templated_fields = "" %}
+    {% if field.value.templates is defined %}
+        {% set templated_fields %}{{  macro.generate_collection_fields(field, field.value.templates) }}{% endset %}
+    {% endif %}
 
     <editor-collection
-            :existing-fields='{{ existing_fields | json_encode }}'
-            :templates='{{ templated_fields | json_encode }}'
+            :existing-fields='{{ existing_fields }}'
+            :templates='{{ templated_fields }}'
             :labels='{{ labels | json_encode }}'
     ></editor-collection>
 
